EI-256 - Refactor to find all jobs at once instead of multiple db queries